# gittin

./: CMakeLists.txt  README.md  gittin.pc.in  libgit.pc.in
examples/: CMakeLists.txt  example1.cpp
rpm/: gittin.spec
src/: CMakeLists.txt  branch.cpp  branch.h  branch.hpp  command.cpp  command.hpp  commit.cpp  commit.h  commit.hpp  repo.cpp  repo.h  repo.hpp  repostatus.cpp  repostatus.h  repostatus.hpp  tag.cpp  tag.h  tag.hpp
